--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 # Authors
 
-Name Name:
+Aditya Narayan Sankaran:
   name        : "Aditya Narayan Sankaran"
   uri         : "https://callmesanfornow.github.io"
   email       : "asankaran@telecom-sudparis.eu"
