--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : "he/him/his"  
   bio              : "PhD student in Computer Science"
   location         : "Paris, FR"
-  employer         : "Télécom SudParis, Institut Polytechnique de Paris"
+  employer         : "Télécom SudParis"
   uri              : # URL
   email            : "asankaran@telecom-sudparis.eu" 
 
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # aditya-narayan-san
+  linkedin         : aditya-narayan-san
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
